List of features / changes made / release notes, in reverse chronological order.
If not stated, FINUFFT is assumed (cuFINUFFT <=1.3 is listed separately).

Master, using release name V 2.4.0 (2/11/25)

* Added GPU spread interp only test. Added CPU spread interp only test to cmake
* Make attributes private in Python Plan classes and allow read-only access to
  them using properties (Andén #608).
* Remove possibility to supply real dtypes to Plan interfaces. Now only complex
  dtypes are supported (Andén #606).
* CPU opts.spreadinterponly (experts only), and GPU, logic and docs changed so
  upsampfac controls kernel shape properly. Add C++/MATLAB demos. #602 (Barnett)
* PR618: removing alloca and using kernel dispatch on the GPU (Barbone)
* PR617: Caching pip dependencies in github actions.
  Forcing Ninja when building python on Windows.
* PR614: Added support for sccache in github actions.
  Caching cmake dependencies so to avoid downloading fftw, xsimd, etc every time
* fully removed chkbnds option (opts and spreadopts) (Barnett)
* classic GNU makefile settings make.inc.* tidied to make-platforms/ (Barnett)
* unified separate-dim arrays (eg X,Y,Z->XYZ), simplifiying core (Reinecke #592)
* exit codes of many-vector tests now insensitive to one-mode randomness
  (Barnett)
* various bugfixes (DUCC+Python, Python dtype chk, Fortran opts)
* Large re-org of CPU lib code to remove C-style macros (Martin Reinecke)
  PR 558: de-macroize FFT (FFT plan now a class), and OMP funcs.
  PR 567: replace dual-pass compilation to .o and _32.o by C++ templating.
  - all FLT/CPX macros replaced by templating in main lib (not in test codes).
  - finufft_plan changed from struct to class, with setpts/exec methods.
  - spreadinterp reversed order of funcs to avoid fwd declarations.
  - finufft.cpp and defs.h replaced by finufft_core.{h,cpp}.
  PR 584: follow-up, more idiomatic C++.
  - simplify finufft_core internals via class members instead of struct fields.