@@ -75,3 +75,14 @@ function(copy_dll source_target destination_target)
     unset(SOURCE_FILE)
     unset(DESTINATION_FILE)
 endfunction()
+
+include(CheckIPOSupported)
+check_ipo_supported(RESULT LTO_SUPPORTED OUTPUT LTO_ERROR)
+
+if(LTO_SUPPORTED)
+    message(STATUS "LTO is supported and enabled.")
+    set(FINUFFT_INTERPROCEDURAL_OPTIMIZATION TRUE)
+else()
+    message(WARNING "LTO is not supported: ${LTO_ERROR}")
+    set(FINUFFT_INTERPROCEDURAL_OPTIMIZATION FALSE)
+endif()
