@@ -7,7 +7,7 @@ set_target_properties(
     cuperftest
     PROPERTIES
         LINKER_LANGUAGE CUDA
-        CUDA_ARCHITECTURES "${FINUFFT_CUDA_ARCHITECTURES}"
+        CUDA_ARCHITECTURES "${CMAKE_CUDA_ARCHITECTURES}"
         CUDA_STANDARD 17
         CUDA_STANDARD_REQUIRED ON
 )
