@@ -13,12 +13,12 @@ foreach(srcfile ${test_src})
     target_compile_features(${executable} PUBLIC cxx_std_17)
     set_target_properties(
         ${executable}
-        PROPERTIES LINKER_LANGUAGE CUDA CUDA_ARCHITECTURES "${FINUFFT_CUDA_ARCHITECTURES}"
+        PROPERTIES LINKER_LANGUAGE CUDA CUDA_ARCHITECTURES "${CMAKE_CUDA_ARCHITECTURES}"
     )
     message(
         STATUS
         "Adding test ${executable}"
-        " with CUDA_ARCHITECTURES=${FINUFFT_CUDA_ARCHITECTURES}"
+        " with CUDA_ARCHITECTURES=${CMAKE_CUDA_ARCHITECTURES}"
         " and INCLUDE=${CUFINUFFT_INCLUDE_DIRS}"
     )
 endforeach()
